--- a/starter-code/src/App.css
+++ b/starter-code/src/App.css
@@ -26,3 +26,11 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.table th {
+   text-align: center;   
+}
+
+.table td {
+   text-align: center;   
+}
